name:                Hydrogen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Hydrogen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hydrogen.Hydrogen
                     , Hydrogen.HydroCore
                     , Hydrogen.Model.MScene
                     , Hydrogen.Model.MSceneGeneral
                     , Hydrogen.Model.MScene2D
                     , Hydrogen.Model.MScene3D
                     , Hydrogen.Tool.TScene3D
                     , Hydrogen.Tool.TBuilder3D
                     , Hydrogen.Tool.TGeneratorS3D

                     , ThreeJS.HThreeJS

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       MultiParamTypeClasses
                       FlexibleInstances
                       TemplateHaskell
                       QuasiQuotes
                       FlexibleContexts
                       GeneralizedNewtypeDeriving

  build-depends:       base >= 4.7 && < 5
                     , binary                    >= 0.8.3
                     , aeson                     >= 0.11.2
                     , directory                 >= 1.2.6
                     , MissingH                  >= 1.4.0
                     , shakespeare               >= 2.0.11
                     , yaml                      >= 0.8.21
                     , HFitUI

  default-language:    Haskell2010

executable Hydrogen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Hydrogen
  default-language:    Haskell2010

test-suite Hydrogen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Hydrogen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Hydrogen
